added postsCount to profile
